--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 			<version>20160212</version>
 		</dependency>
 		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.storm</groupId>
 			<artifactId>storm-core</artifactId>
 			<version>0.9.5</version>
